[package]
edition = "2021"
name = "extract_node_api"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dotext = { git = "https://github.com/Roba1993/dotext.git", version = "0.1.1" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
pdf-extract = "0.7.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
